# TensorCompiler

./: CMakeLists.txt  README.md  run_test_models.sh  test.onnx
include/ir/: attribute.hpp  graph.hpp  ids.hpp  node.hpp  types.hpp  value.hpp
include/viz/: GraphvizDump.hpp
src/: graph.cpp  main.cpp
src/viz/: GraphvizDump.cpp
test_models/: add_mul.onnx  batchnorm.onnx  branching.onnx  concat_split.onnx  constant_init.onnx  conv_relu.onnx  gemm.onnx  matmul.onnx  mlp.onnx  multi_output.onnx  reshape_transpose.onnx  softmax_reduce.onnx  split_explicit.onnx
tests/: CMakeLists.txt  test_ir_basic.cpp
